sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: '=' expected but ';' found.
	var x;
             ^AlgBubbleSort1:4: error: illegal start of simple expression
	for (i<-0 to lgr-2); {
                           ^